--- a/src/components/unit/Unit.module.css
+++ b/src/components/unit/Unit.module.css
@@ -14,6 +14,5 @@
 }
 
 .selected {
-    background-color: rgba(47, 243, 47, 0.2);
-    border: 2px solid rgb(47, 243, 47);
+    border: 1px dashed #1dcc25;
 }
